add routing response to auth and sign out

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>Chat</title>
   </head>
-  <body>
+  <body style="background-color: #BDCADB;">
     <div id="root"></div>
   </body>
 </html>
