--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>Chat</title>
   </head>
-  <body style="background-color: #BDCADB;">
+  <body>
     <div id="root"></div>
   </body>
 </html>
